--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,8 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-	<script src="https://use.fontawesome.com/releases/v5.12.0/js/all.js"></script>
+  <script src="https://use.fontawesome.com/releases/v5.12.0/js/all.js"></script>
+  <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyDQLJrTTKB2CVDd_IlZLAeP5GNaJABqbJk"></script>
 	<link href="styles.scss" rel="stylesheet">
 
  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900&display=swap" rel="stylesheet">
