--- a/src/index.html
+++ b/src/index.html
@@ -5,16 +5,18 @@
 	<title>Final Space App</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<base href="/">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+  <!-- <link rel="icon" type="image/x-icon" href="project icon.png" /> -->
+
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
   <script src="https://use.fontawesome.com/releases/v5.12.0/js/all.js"></script>
   <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyDQLJrTTKB2CVDd_IlZLAeP5GNaJABqbJk"></script>
-	<link href="styles.scss" rel="stylesheet">
 
- <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900&display=swap" rel="stylesheet">
- <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	<link href="styles.scss" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
 	<app-root></app-root>
